[package]
name = "hq9plus"
version = "0.1.0"
authors = ["DEADBLACKCLOVER <deadblackclover@protonmail.com>"]
description = "HQ9+ interpreter made using Rust"
edition = "2018"
license = "GPL-3.0"
readme = "README.md"
homepage = "https://github.com/deadblackclover/hq9plus-rust"
repository = "https://github.com/deadblackclover/hq9plus-rust"
keywords = ["hq9p", "hq9plus", "rust"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
